--- a/css/common.css
+++ b/css/common.css
@@ -30,6 +30,7 @@ h3 {
 a {
   text-decoration: none;
   color: #1e0606;
+  cursor: pointer;
 }
 
 .button {
@@ -41,6 +42,7 @@ a {
   text-transform: uppercase;
   font-weight: bold;
   border: none;
+  cursor: pointer;
 }
 
 .undoted {
@@ -75,10 +77,39 @@ a {
   text-transform: uppercase;
 }
 
+.header__btn {
+  width: 24px;
+  height: 24px;
+  border: none;
+  overflow: hidden;
+  object-fit: cover;
+  padding: 0;
+  cursor: pointer;
+}
+
+.btn-img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.header__input {
+  border: none;
+}
 .footer {
   background: #434343;
 }
 
+.footer__navigation,
+.footer__customer,
+.footer__connect {
+  margin-left: 110px;
+  margin-bottom: 20px;
+  padding-top: 110px;
+}
+.footer__other {
+  margin-left: 110px;
+}
 .footer__title {
   margin: 0;
   padding: 0;
@@ -101,4 +132,92 @@ a {
 .footer__link-dl {
   color: #a2a2a2;
   font-weight: normal;
+}
+
+.footer__input {
+  background-color: #666666;
+  border: none;
+  outline: none;
+  color: #ffffff;
+}
+
+::-webkit-input-placeholder {
+  color: #ebebeb;
+}
+
+.breadcrumb__item {
+  font-family: "Crimson Text";
+  font-style: italic;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 25px;
+  color: #1e0606;
+}
+
+.breadcrumb__active {
+  color: #1e0606;
+  opacity: 0.5;
+}
+
+.breadcrumb__list li + li:before {
+  color: black;
+  content: " > ";
+}
+
+.products__item {
+  width: 280px;
+  height: 270px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.products__link {
+  display: inline-block;
+  width: 280px;
+  height: 270px;
+}
+
+.products__kids {
+  background-image: url(..//img/app_kids.png);
+}
+
+.products__holiday {
+  background-image: url(..//img/holiday.png);
+}
+
+.products__toys {
+  background-image: url(..//img/toys.png);
+}
+
+.products__accessories {
+  background-image: url(..//img/accessories.png);
+}
+
+.products__sale {
+  background-image: url(..//img/sale.png);
+}
+
+.products__adults {
+  background-image: url(..//img/app_adults.png);
+}
+
+.products__names {
+  padding-top: 103px;
+}
+
+.products__short {
+  padding-top: 119px;
+}
+
+.products__name {
+  padding: 0;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 32px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
 }
