--- a/css/common.css
+++ b/css/common.css
@@ -3,10 +3,17 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   line-height: 22px;
   color: #1e0606;
+}
+
+img {
+  display: block;
+  width: 100%;
 }
 
 h1,
@@ -57,17 +64,38 @@ a {
   font-size: 0;
 }
 
-.header {
+.conteiner {
   max-width: 1180px;
   margin: auto;
-  margin-top: 50px;
-  margin-bottom: 60px;
 }
 
+/* HEADER */
+
+.header {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 40px;
+}
+
+.logo {
+  max-width: 100px;
+  max-height: 52px;
+}
+.header__nav {
+  margin: 0 auto 0 60px;
+}
 .header__list {
-  text-transform: uppercase;
+  display: flex;
+  margin: 0;
+}
+
+.header__item {
+  margin-right: 20px;
   font-size: 14px;
   line-height: 19px;
+  text-transform: uppercase;
 }
 
 .header__button {
@@ -80,6 +108,7 @@ a {
 .header__btn {
   width: 24px;
   height: 24px;
+  margin-top: 5px;
   border: none;
   overflow: hidden;
   object-fit: cover;
@@ -87,29 +116,19 @@ a {
   cursor: pointer;
 }
 
-.btn-img {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+.header__search {
+  margin-right: 23px;
 }
 
 .header__input {
   border: none;
 }
+
+/*  FOOTER */
 .footer {
   background: #434343;
 }
 
-.footer__navigation,
-.footer__customer,
-.footer__connect {
-  margin-left: 110px;
-  margin-bottom: 20px;
-  padding-top: 110px;
-}
-.footer__other {
-  margin-left: 110px;
-}
 .footer__title {
   margin: 0;
   padding: 0;
@@ -145,6 +164,8 @@ a {
   color: #ebebeb;
 }
 
+/*  BREADCRUMB */
+
 .breadcrumb__item {
   font-family: "Crimson Text";
   font-style: italic;
@@ -164,6 +185,7 @@ a {
   content: " > ";
 }
 
+/*  PRODUCTS */
 .products__item {
   width: 280px;
   height: 270px;
