--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-.header {
-  margin-bottom: 40px;
-}
-
-main {
-  max-width: 1180px;
-  margin: auto;
-}
-
 .banner {
   height: 500px;
   padding-top: 54px;
@@ -19,10 +10,15 @@ main {
   position: relative;
 }
 
+.banner__innerpic {
+  width: 635px;
+}
+
 .banner__img {
+  width: 34.5%;
   position: absolute;
-  top: 259px;
-  right: 366px;
+  top: 261px;
+  right: 435px;
 }
 
 .banner__heading {
