--- a/css/common.css
+++ b/css/common.css
@@ -35,6 +35,7 @@ h3 {
 }
 
 a {
+  display: block;
   text-decoration: none;
   color: #1e0606;
   cursor: pointer;
@@ -129,6 +130,19 @@ a {
   background: #434343;
 }
 
+.footer__info {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 100px;
+  border-bottom: 1px solid #666666;
+  margin-bottom: 7px;
+}
+
+.footer__navigation,
+.footer__customer,
+.footer__connect {
+  width: 380px;
+}
 .footer__title {
   margin: 0;
   padding: 0;
@@ -136,10 +150,22 @@ a {
   color: #aaaaaa;
   font-weight: normal;
   border-bottom: 1px solid #666666;
+  margin-bottom: 26px;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 14px;
+}
+
+.footer__item {
+  margin-bottom: 15px;
 }
 
 .footer__link {
   color: #ffffff;
+  font-style: normal;
   font-weight: normal;
 }
 
@@ -152,8 +178,33 @@ a {
   color: #a2a2a2;
   font-weight: normal;
 }
+.footer__icons {
+  display: flex;
+  margin-right: 10px;
+}
 
+.icons__item {
+  margin-right: 10px;
+}
+.footer__form {
+  display: flex;
+  margin-bottom: 23px;
+}
+
+.footer__form button {
+  width: 81px;
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
 .footer__input {
+  padding-left: 15px;
+  width: 300px;
+  height: 40px;
   background-color: #666666;
   border: none;
   outline: none;
@@ -161,7 +212,32 @@ a {
 }
 
 ::-webkit-input-placeholder {
+  font-family: "Open Sans", sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
   color: #ebebeb;
+}
+
+.footer__other {
+  display: flex;
+  align-items: center;
+  padding-bottom: 100px;
+}
+
+.footer__wrap {
+  width: 245px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 155px;
+}
+.footer__wrap-stars {
+  margin-left: 0 auto 0 25px;
+}
+
+.footer__text-copy {
+  margin-right: 109px;
 }
 
 /*  BREADCRUMB */
@@ -187,10 +263,8 @@ a {
 
 /*  PRODUCTS */
 .products__item {
-  width: 280px;
-  height: 270px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  max-width: 280px;
+  max-height: 270px;
 }
 
 .products__link {
