--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,9 @@
   max-width: 635px;
   max-height: 461px;
   position: absolute;
-  top: 143px;
+  bottom: 286px;
   right: 206px;
+  left: 544px;
 }
 
 .banner__heading {
@@ -130,7 +131,6 @@
 
 .delivery__img {
   width: 100%;
-  height: 115%;
   overflow: hidden;
 }
 
@@ -216,7 +216,7 @@
 /* DESINGN */
 .design {
   width: 543px;
-  height: 228px;
+  padding-bottom: 25px;
   background-color: #e1f0f7;
   margin-right: 57px;
 }
