--- a/css/toy.css
+++ b/css/toy.css
@@ -68,6 +68,7 @@ input[type="range"] {
   background: transparent;
   border: none;
 }
+
 input[type="range"]::-webkit-slider-runnable-track {
   height: 4px;
   background-color: #c29974;
@@ -106,6 +107,7 @@ input[type="range"]::-webkit-slider-thumb {
 .radio-list li {
   margin-bottom: 10px;
 }
+
 .checkbox-list,
 .radio-list {
   display: flex;
@@ -116,6 +118,7 @@ input[type="range"]::-webkit-slider-thumb {
 .radio-limit {
   width: 240px;
 }
+
 .radio-list-limit {
   margin: 0;
   padding: 0;
@@ -153,6 +156,10 @@ input[type="range"]::-webkit-slider-thumb {
 
 .toy__item {
   margin-bottom: 43px;
+}
+
+.toy__item:hover {
+  cursor: pointer;
 }
 
 .toy__img {
