--- a/css/style.css
+++ b/css/style.css
@@ -34,27 +34,24 @@
   width: 31px;
   height: 3px;
   top: 100px;
-  left: 50px;
+  left: 30px;
   background: #d6cac2;
 }
 
 .item-one {
   top: 100px;
-  left: 30px;
 }
+
 .item-two {
   top: 111px;
-  left: 30px;
 }
 
 .item-three {
   top: 122px;
-  left: 30px;
 }
 
 .item-four {
   top: 133px;
-  left: 30px;
 }
 
 .banner__btn {
@@ -64,6 +61,10 @@
   background: #d6cac2;
   border: none;
   cursor: pointer;
+}
+
+.banner__btn:hover {
+  background: rgba(30, 6, 6, 0.6);
 }
 
 .banner__btn-active {
