--- a/css/toy.css
+++ b/css/toy.css
@@ -133,6 +133,21 @@ input[type="range"]::-webkit-slider-thumb {
   height: 35px;
 }
 
+/* .radio-list-limit li:hover:before {
+  position: relative;
+  visibility: visible;
+}
+
+.radio-list-limit li:before {
+  content: "";
+  background-color: #eddeeb;
+  width: 80px;
+  height: 35px;
+  display: block;
+  position: absolute;
+  visibility: hidden;
+} */
+
 .radio__text {
   position: absolute;
   display: block;
@@ -165,7 +180,38 @@ input[type="range"]::-webkit-slider-thumb {
 .toy__img {
   margin-bottom: 30px;
 }
+
+.toy__link:before {
+  position: absolute;
+  visibility: hidden;
+  padding-top: 90px;
+  content: "LEARN MORE";
+  background-color: #e5eaf8;
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 29px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #1e0606;
+  width: 207px;
+  height: 115px;
+  display: block;
+  top: 85px;
+}
+
+.toy__link:hover:before {
+  opacity: 0.8;
+  visibility: visible;
+}
+
+.toy__link:focus:before {
+  visibility: visible;
+  opacity: 0.67;
+}
+
 .toy__link {
+  position: relative;
   display: flex;
   align-items: center;
   flex-direction: column;
