--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  outline-color: #c29974;
 }
 
 body {
@@ -27,12 +28,6 @@ h2 {
 h3 {
   padding: 0;
   margin: 0;
-  font-family: "Crimson Text", serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 25px;
-  color: #1e0606;
 }
 
 a {
@@ -40,6 +35,7 @@ a {
   text-decoration: none;
   color: #1e0606;
   cursor: pointer;
+  outline-color: #c29974;
 }
 
 .button {
@@ -369,6 +365,10 @@ label {
   width: 380px;
 }
 
+.footer__connect .footer__title {
+  margin-bottom: 24px;
+}
+
 .footer__title {
   margin: 0;
   padding: 0;
@@ -441,7 +441,7 @@ label {
 
 .footer__form {
   display: flex;
-  margin-bottom: 23px;
+  margin-bottom: 25px;
 }
 
 .footer__form button {
@@ -469,7 +469,7 @@ label {
   width: 300px;
   height: 40px;
   background-color: #666666;
-  border: none;
+  border: 1px solid transparent;
   outline: none;
   color: #ffffff;
 }
@@ -493,7 +493,7 @@ label {
   padding-bottom: 100px;
 }
 
-.footer__wrap {
+.footer__stars-form {
   width: 245px;
   margin-right: 155px;
 }
@@ -506,6 +506,10 @@ label {
   margin: 0;
 }
 
+.footer__stars-field:focus {
+  color: #c29974;
+}
+
 .footer__stars-list {
   display: flex;
   align-items: center;
@@ -515,7 +519,6 @@ label {
 
 .footer__stars-title {
   width: 123px;
-
   font-family: "Open Sans";
   font-style: normal;
   font-weight: normal;
