--- a/css/common.css
+++ b/css/common.css
@@ -79,6 +79,7 @@ a {
 fieldset {
   border: none;
   padding: 0;
+  margin: 0;
   margin-bottom: 20px;
 }
 
@@ -96,8 +97,8 @@ input {
 input,
 textarea {
   border: 1px solid rgba(0, 0, 0, 0.2);
-  padding-bottom: 11px;
-  padding-left: 17px;
+  padding-bottom: 7px;
+  padding-left: 20px;
   padding-top: 13px;
 }
 
@@ -165,25 +166,26 @@ label {
 
 .checkbox-label:before,
 .radio-label:before {
-  top: -3px;
-  left: -4px;
+  top: 0px;
+  left: -3px;
   border: 2px solid #c29974;
-  width: 17px;
+  border-radius: 4px;
+  width: 16px;
   height: 17px;
   background: transparent;
 }
 
 .radio-label:before {
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 17px;
 }
 
 .checkbox-label:after,
 .radio-label:after {
-  top: 0px;
-  left: -1px;
-  width: 14px;
+  top: 2px;
+  left: 1px;
+  width: 16px;
   height: 15px;
   background-image: url(..//img/v_simbol.svg);
   opacity: 0;
@@ -193,7 +195,7 @@ label {
   border-radius: 50%;
   width: 12px;
   height: 12px;
-  top: 3px;
+  top: 4px;
   left: 2px;
   background-image: url(..//img/ellipse_radio.svg);
 }
@@ -243,8 +245,16 @@ label {
   position: absolute;
   display: block;
   top: 7px;
-  left: 25px;
+  left: 29px;
   cursor: pointer;
+}
+
+.radio-text-twenty {
+  left: 19px;
+}
+
+.radio-text-fifty {
+  left: 19px;
 }
 
 .checkbox-label:hover,
@@ -374,6 +384,8 @@ label {
   padding: 0;
   padding-bottom: 23px;
   color: #aaaaaa;
+  font-size: 16px;
+  line-height: 22px;
   font-weight: normal;
   border-bottom: 1px solid #666666;
   margin-bottom: 26px;
@@ -465,7 +477,8 @@ label {
   margin-bottom: 0;
 }
 .footer__input {
-  padding-left: 15px;
+  padding-top: 11px;
+  padding-left: 14px;
   width: 300px;
   height: 40px;
   background-color: #666666;
@@ -618,6 +631,10 @@ label {
   line-height: 25px;
   color: #1e0606;
   margin-right: 20px;
+}
+
+.breadcrumb__link {
+  text-transform: capitalize;
 }
 
 .breadcrumb__link_active {
